Fixing the skills spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1079,6 +1079,7 @@ a#list-float:hover>i {
 .skills {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
 }
 .skills__skill,
 .skills__skill-havamal,
@@ -1091,7 +1092,7 @@ a#list-float:hover>i {
   background: rgba(153, 153, 153, 0.2);
   border-radius: 5px;
   font-weight: 600;
-  color: #1d2158; 
+  color: #1d2158;
 }
 .skills__skill-havamal {
   background: #005293;
